--- a/exercise-1.html
+++ b/exercise-1.html
@@ -10,6 +10,7 @@
     */
     $(document).ready(function () {
       // Put your code here
+      $("button").text("Please click me");
     });
     </script>
   </head>
