--- a/exercise-3.html
+++ b/exercise-3.html
@@ -8,6 +8,15 @@
     /*
     When the button is clicked, change the text of the paragraph #the-message to "You clicked me!", and the text of the button #the-button to "Click again?".
     */
+    $(document).ready(function () 
+    {
+      // Put your code here
+      $("#the-button").click(function ()
+      {
+        $("#the-button").text("Click again?");
+        $("#the-message").text("You clicked me!");
+      });
+    });
     </script>
   </head>
   <body>
